[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Jehadabuawwad <jehadabuawwad@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
